--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,11 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "mdbreact": "^4.17.0",
     "moment": "^2.24.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-datepicker": "^2.8.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
